<resources>
  <string name="app_name">Travelers\' notes quiz</string>
  <string name="question_capital_of_thailand">What is the capital of Thailand?</string>
  <string name="hint_user_answer">Your answer</string>
  <string name="right_answer_bangkok">The right answer is Bangkok!  It is known in Thai as Krung Thep Maha Nakhon</string>
  <string name="question_baggage_at_bangkok_airways">What is forbidden to carry in baggage at Bangkok Airways?</string>
  <string name="answer_vape">Vape</string>
  <string name="answer_lighter">Lighter</string>
  <string name="answer_swatter">Electronic Mosquito Swatter</string>
  <string name="answer_power_bank">Power bank</string>
  <string name="answer_bangkok_airways">You can\'t put in baggage none of these stuff :(</string>
  <string name="question_durian">Who pollinates the flowers of a durian?</string>
  <string name="right_answer_bats">The right answer: bats, because flowers of durian blossom only at night</string>
  <string name="question_capital_of_malaysia">What is the capital of Malaysia?</string>
  <string name="answer_kuala_lumpur">Kuala-Lumpur what means \'muddy confluence\'</string>
  <string name="answer_first_computer_game">Was the first computer game called Spacewar?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="answer_yes">Yes, it was in 1962</string>
  <string name="question_new_year_in_thai">What a new year is celebrated in Thailand?</string>
  <string name="traditional_new_year">Traditional New Year</string>
  <string name="chinese_new_year">Chinese New Year</string>
  <string name="thai_new_year">Thai New Year</string>
  <string name="vietnamese_new_year">Vietnamese New Year</string>
  <string name="answer_thai_new_year">They are celebrating Thai New Year - Songkran. Traditional and Chinese New Year are celebrating as well.</string>
  <string name="button_view_result">View result</string>
  <string name="button_view_answers">View answers</string>
  <string name="button_send_result">Share result</string>
  <string name="answer_butterflies">Butterflies</string>
  <string name="answer_night_mothes">Night mothes</string>
  <string name="answer_colibri">Colibri</string>
  <string name="answerbats">Bats</string>
  <string name="your_total_score">Your total score: %1$d from %2$d!</string>
  <string name="you_final_result">Your final result:  </string>
  <string name="bangkok">bangkok</string>
  <string name="send_email_text">Hey!\nMy total score in Travelers\' notes quiz: %1$d from %2$d! (https://t.me/travelernote) \nYou can find this amazing app on GitHub: https://github.com/svcat/TravellersQuiz</string>
  <string name="send_email_subject">My score from Travelers\' notes quiz</string>
  <string name="kuala_lower_case">kuala</string>
  <string name="lumpur_lower_case">lumpur</string>
  <string name="lumpur_kuala_lower_case">lumpur kuala</string>
  <string name="right_answer">Hooray! The answer is correct!</string>
  <string name="wrong_answer">Try again or view answers for help</string>
</resources>
